Add CC license to site.

--- a/theme/index.html
+++ b/theme/index.html
@@ -17,10 +17,13 @@ window.onload = function() {
   </script>
 </head>
 <body>
-  <h1>Crown House</h1>
+  <h1><a href="/">Crown House</a></h1>
   <hr/>
-  {{content}}
   <div class='supplemental'>{{menu}}</div>
+  {{content}}
   <div style='clear:right;'><!-- Yuck --></div>
+  <div class='footer'>
+    <p>This work is licensed under a<br/><a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>.</p>
+  </div>
 </body>
 </html>
